# prynterface

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  pytest.yml  pytest_detail.yml  pytest_quick.yml  todo.yml
prynterface/: README.md  context.py  prynterface.py
prynterface/config/default/: parsing.json  plugins.json
prynterface/docs/: path.md
prynterface/docs/dev/: __piping_test.py  pipeline.md
prynterface/modules/clargs/: clargs.py
prynterface/modules/configuration/: base.py  parsing.py  plugins.py  printer.py
prynterface/modules/parser/: helpers.py  matcher.py  parser.py
prynterface/modules/parser/helper/: functions.py
prynterface/modules/parsing/: parser.py
prynterface/modules/plugins/pipeline/: baseclass.py  pipelinefactory.py
prynterface/modules/plugins/pipeline/default/: detector.py  extractor.py  postprocessor.py  preprocessor.py
prynterface/modules/sinterface/: exceptions.py  printer.py  serialport.py  sinterface.py
prynterface/modules/storagecontroller/: storagecontroller.py
prynterface/modules/ui/: ui.py
prynterface/modules/ui/cli/: cli.py
prynterface/modules/ui/gui/: gui.py
prynterface/parsing/: parser.py  pipelines.py
tests/: context.py  test_config_base.py  test_config_parsing.py  test_imports.py  test_parsing.py  test_sinterface.py
tests/configs/base/: bad.json  baduser.json
tests/configs/base/default/: user.json
tests/configs/parsing/: simple.json
tests/samples/: M115.txt
